Phase 2 completed. Flex layout & responsive.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,11 +1,15 @@
 @import 'normalize';
 @include normalize();
 
+@import 'partials/variables';     // Good
 
-@import 'partials/variables';
+@import 'partials/global';        // Good
+@import 'partials/header';        // Good
+@import 'partials/controlbar';    // Good
+@import 'partials/transactions';  //
 
-@import 'partials/layout';
-@import 'partials/header';
-@import 'partials/controlbar';
-@import 'partials/transactions';
+
+
+
+@import 'partials/media-queries';
 
