Phase 3 complete - Success & Error alerts

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,9 +4,11 @@
 @import 'partials/variables';     // Good
 
 @import 'partials/global';        // Good
+@import 'partials/alerts';        // Good
 @import 'partials/header';        // Good
 @import 'partials/controlbar';    // Good
-@import 'partials/transactions';  //
+@import 'partials/transactions';  // Good
+
 
 
 
