Got pages more or less working - CR key hndlr bad

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,10 +5,12 @@
 
 @import 'partials/global';        // Good
 @import 'partials/alerts';        // Good
+@import 'partials/menu';          // Good
+
 @import 'partials/header';        // Good
 @import 'partials/controlbar';    // Good
 @import 'partials/transactions';  // Good
-
+@import 'partials/userforms';     // Good
 
 
 
