--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -9,3 +9,6 @@ $expenseRed:  #ff5049;
 $inputBG:      #f7f7f7;
 $inputAccent:  #e7e7e7;
 $inputCtrlBG:  #fff;
+
+$formBG: #eee;
+$formShadow: 2px 2px 5px grey;
