--- a/src/sass/partials/_transactions.scss
+++ b/src/sass/partials/_transactions.scss
@@ -4,9 +4,21 @@
 .transactions {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   max-width: 600px;
   width: 100%;
   margin: 0 auto;
+  position: relative;
+  #page_cover {
+    width: 100%;
+    height: 110%;
+    background-color: #fff;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    display: none;
+  }
 }
 .income,
 .expenses{
