Cleaning-up Alerts

--- a/src/sass/partials/_alerts.scss
+++ b/src/sass/partials/_alerts.scss
@@ -14,6 +14,7 @@
     color: #fff;
     padding: 5px 10px;
     display: none;
+    transition: all .4s ease-in-out;
   }
   &__msg-error {
     border: 2px solid $expenseRed;
