--- a/src/sass/partials/_alerts.scss
+++ b/src/sass/partials/_alerts.scss
@@ -17,8 +17,8 @@
     color: #fff;
     padding: 5px 10px;
     margin: 10px auto;
-//    opacity: 0;
-//    transform: scale(0);
+    opacity: 0;
+    transform: scale(0);
     transition: all .4s ease-in-out;
   }
   &__msg-error {
